<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
            android:id="@+id/picker_days_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/monday"
                android:textColor="?colorOnBackground"
                app:useMaterialThemeColors="true"
                android:button="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                android:drawableTint="?colorOnBackground"
                android:text="@string/monday_letter"/>

        <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/tuesday"
                android:textColor="?colorOnBackground"
                app:useMaterialThemeColors="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:textAlignment="center"
                android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                android:drawableTint="?colorOnBackground"
                android:text="@string/tuesday_letter"/>

        <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/wednesday"
                android:textColor="?colorOnBackground"
                app:useMaterialThemeColors="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:textAlignment="center"
                android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                android:drawableTint="?colorOnBackground"
                android:text="@string/wednesday_letter"/>

        <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/thursday"
                android:textColor="?colorOnBackground"
                app:useMaterialThemeColors="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:textAlignment="center"
                android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                android:drawableTint="?colorOnBackground"
                android:text="@string/thursday_letter"/>

        <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/friday"
                android:textColor="?colorOnBackground"
                app:useMaterialThemeColors="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:textAlignment="center"
                android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                android:drawableTint="?colorOnBackground"
                android:text="@string/friday_letter"/>

        <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/saturday"
                android:textColor="?colorOnBackground"
                app:useMaterialThemeColors="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:textAlignment="center"
                android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                android:drawableTint="?colorOnBackground"
                android:text="@string/saturday_letter"/>

        <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/sunday"
                android:textColor="?colorOnBackground"
                app:useMaterialThemeColors="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:textAlignment="center"
                android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                android:drawableTint="?colorOnBackground"
                android:text="@string/sunday_letter"/>
    </LinearLayout>

    <TimePicker
            android:id="@+id/datetimeTimePicker"
            android:theme="@style/testing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/picker_days_layout"
            android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
