<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardElevation="4dp"
        tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground">

        <View
                android:id="@+id/reminder_color"
                android:layout_width="10dp"
                android:background="@android:color/transparent"
                android:visibility="gone"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_height="0dp"/>

        <TextView
                android:id="@+id/reminder_time_text"
                android:textColor="?colorOnSurface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/reminder_color"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textAppearance="@android:style/TextAppearance.Material.Title"
                android:textSize="24sp"/>

        <LinearLayout
                android:id="@+id/reminder_days_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/reminder_time_text"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                >

            <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/reminder_monday"
                    android:textColor="?colorOnBackground"
                    app:useMaterialThemeColors="true"
                    android:button="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                    android:drawableTint="?colorOnBackground"
                    android:text="@string/monday_letter"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/reminder_tuesday"
                    android:textColor="?colorOnBackground"
                    app:useMaterialThemeColors="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:layout_weight="1"
                    android:button="@null"
                    android:textAlignment="center"
                    android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                    android:drawableTint="?colorOnBackground"
                    android:text="@string/tuesday_letter"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/reminder_wednesday"
                    android:textColor="?colorOnBackground"
                    app:useMaterialThemeColors="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:layout_weight="1"
                    android:button="@null"
                    android:textAlignment="center"
                    android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                    android:drawableTint="?colorOnBackground"
                    android:text="@string/wednesday_letter"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/reminder_thursday"
                    android:textColor="?colorOnBackground"
                    app:useMaterialThemeColors="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:layout_weight="1"
                    android:button="@null"
                    android:textAlignment="center"
                    android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                    android:drawableTint="?colorOnBackground"
                    android:text="@string/thursday_letter"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/reminder_friday"
                    android:textColor="?colorOnBackground"
                    app:useMaterialThemeColors="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:layout_weight="1"
                    android:button="@null"
                    android:textAlignment="center"
                    android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                    android:drawableTint="?colorOnBackground"
                    android:text="@string/friday_letter"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/reminder_saturday"
                    android:textColor="?colorOnBackground"
                    app:useMaterialThemeColors="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:layout_weight="1"
                    android:button="@null"
                    android:textAlignment="center"
                    android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                    android:drawableTint="?colorOnBackground"
                    android:text="@string/saturday_letter"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/reminder_sunday"
                    android:textColor="?colorOnBackground"
                    app:useMaterialThemeColors="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:layout_weight="1"
                    android:button="@null"
                    android:textAlignment="center"
                    android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                    android:drawableTint="?colorOnBackground"
                    android:text="@string/sunday_letter"/>
        </LinearLayout>

        <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/type_image_reminder"
                android:contentDescription="@string/stop_type"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toEndOf="@id/reminder_color"
                app:layout_constraintTop_toBottomOf="@id/reminder_time_text"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
                android:id="@+id/title_text_reminder"
                android:textColor="?colorOnSurface"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/reminder_days_layout"
                app:layout_constraintStart_toEndOf="@+id/type_image_reminder"
                android:textAppearance="@android:style/TextAppearance.Material.Title"
                android:gravity="center"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toStartOf="@+id/edit_view_reminder"
                android:textSize="18sp"/>

        <androidx.appcompat.widget.AppCompatButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="12dp"
                android:paddingBottom="4dp"
                app:layout_constraintTop_toBottomOf="@id/reminder_days_layout"
                app:layout_constraintBottom_toTopOf="@id/reorder_view_reminder"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@android:color/transparent"
                android:drawableBottom="@drawable/ic_edit_black_24dp"
                android:id="@+id/edit_view_reminder"
                />

        <androidx.appcompat.widget.AppCompatButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="4dp"
                android:paddingBottom="12dp"
                app:layout_constraintTop_toBottomOf="@id/edit_view_reminder"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@android:color/transparent"
                android:drawableBottom="@drawable/ic_reorder_black_24dp"
                android:id="@+id/reorder_view_reminder"
                />


        <GridLayout
                android:layout_width="0dp"
                android:columnCount="7"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/type_image_reminder"
                app:layout_constraintEnd_toStartOf="@+id/edit_view_reminder"
                app:layout_constraintTop_toBottomOf="@+id/title_text_reminder"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="horizontal"
                android:id="@+id/lines_layout_favorite"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="4dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>